--- a/content/advection/advection/advection-second-order.ipynb
+++ b/content/advection/advection/advection-second-order.ipynb
@@ -56,7 +56,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "user_expressions": []
+   },
    "source": [
     "## Piecewise linear reconstruction\n",
     "\n",
@@ -201,19 +203,6 @@
     "where \n",
     "\n",
     "$$g(y_i) = -\\frac{1}{\\Delta x} \\left [ F(a_{i+1/2}) - F(a_{i-1/2}) \\right ]$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We need to store interface values (which we've been denoting with half-integer subscripts, like $a_{i-1/2}$) as arrays which only take integer indices.  We will adopt the common convention that when an array refers to an interface state, it denotes the left interface of a cell.\n",
-    "\n",
-    "E.g., `aint[i]}` means $a_{i-1/2}$\n",
-    "\n",
-    "This is illustrated below for arrays `a[]` which stores cell center quantities and `aint[]` which stores interface values:\n",
-    "\n",
-    "![array notation for interfaces](array-labels.png)"
    ]
   },
   {
