--- a/content/advection/advection-grid-class.ipynb
+++ b/content/advection/advection-grid-class.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "63d0a945-9910-4511-a80e-7af4e22853f9",
    "metadata": {
     "tags": []
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "03a68f32-db9f-4f68-998d-94581f1e59de",
    "metadata": {
     "tags": []
@@ -108,9 +108,11 @@
     "        self.a = self.scratch_array()\n",
     "        self.ainit = self.scratch_array()\n",
     "\n",
-    "    def period(self, u):\n",
-    "        \"\"\" return the period for advection with velocity u \"\"\"\n",
-    "        return (self.xmax - self.xmin) / np.abs(u)\n",
+    "    def __str__(self):\n",
+    "        return f\"nx={self.nx}, ng={self.ng}, xmin={self.xmin}, xmax={self.xmax}\"\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f\"FVGrid({self.nx}, ng={self.ng}, xmin={self.xmin}, xmax={self.xmax})\"\n",
     "\n",
     "    def scratch_array(self):\n",
     "        \"\"\" return a scratch array dimensioned for our grid \"\"\"\n",
@@ -146,6 +148,121 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6dbca05e-ec89-4005-b825-0990d2509388",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": [
+    "Let's test this out to see how the ghost cell filling works.  The above implementation does periodic boundaries."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "ab616851-d715-46c9-9738-f3aca789c27c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FVGrid(10, ng=2, xmin=0.0, xmax=1.0)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = FVGrid(10)\n",
+    "g"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c451306a-a3be-4b1d-8c2d-72237f2b6b37",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": [
+    "We can access the data on the grid as `g.a[]`, and the valid data lives in `g.a[g.ilo:g.ihi+1]` (remembering that range is up to, but not including `ihi+1`)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "baed3535-664b-4f31-9ad8-6c374bd3af1b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.,  0.,  1.,  2.,  3.,  4.,  5.,  6.,  7.,  8.,  9., 10.,  0.,\n",
+       "        0.])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.a[g.ilo:g.ihi+1] = np.arange(g.nx)+1\n",
+    "g.a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52e8eda6-7171-4e04-b11b-dd368e0728cd",
+   "metadata": {
+    "tags": [],
+    "user_expressions": []
+   },
+   "source": [
+    "Now we can fill ghost cells.  For later flexibility, the `fill_BCs()` method takes an argument which is the array we are filling ghost cells on"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "4b109a89-2342-4a68-ae9f-cf8bc58ccf77",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 9., 10.,  1.,  2.,  3.,  4.,  5.,  6.,  7.,  8.,  9., 10.,  1.,\n",
+       "        2.])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.fill_BCs(g.a)\n",
+    "g.a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29b34be7-5d4e-4e23-9b7d-ad66aa2555a5",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": [
+    "There are some other useful methods in this class that we will explore later."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "14a92381-0b85-4db0-b10e-b0d812bc5768",
    "metadata": {
     "user_expressions": []
@@ -162,7 +279,7 @@
     "user_expressions": []
    },
    "source": [
-    "We need to store interface values (which we've been denoting with half-integer subscripts, like $a_{i-1/2}$) as arrays which only take integer indices.  We will adopt the common convention that when an array refers to an interface state, it denotes the left interface of a cell.\n",
+    "Sometimes need to store interface values (which we've been denoting with half-integer subscripts, like $a_{i-1/2}$) as arrays which only take integer indices.  We will adopt the common convention that when an array refers to an interface state, it denotes the left interface of a cell.\n",
     "\n",
     "E.g., `aint[i]}` means $a_{i-1/2}$\n",
     "\n",
@@ -170,14 +287,6 @@
     "\n",
     "![array notation for interfaces](array-labels.png)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e9e31db-9fb7-4b2a-bae2-0a2f52b563bf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
