--- a/content/advection/advection-first-order.ipynb
+++ b/content/advection/advection-first-order.ipynb
@@ -54,7 +54,13 @@
     "user_expressions": []
    },
    "source": [
-    "Now we'll write our driver"
+    "Now we'll write our driver.  We'll take as input:\n",
+    "\n",
+    "* `nx` : the number of zones\n",
+    "* `u` : the advective velocity (we'll assume $u > 0$)\n",
+    "* `C` : the CFL number\n",
+    "\n",
+    "we can also specify the number of periods and pass in the function that supplies the initial conditions"
    ]
   },
   {
@@ -64,7 +70,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def advection(nx, u, C, num_periods=1, init_cond=None):"
+    "def advection(nx, u, C, num_periods=1, init_cond=None):\n",
+    "    \n",
+    "    # create the grid\n",
+    "    g = fv_grid.FVGrid(nx, ng=1)\n",
+    "    \n",
+    "    # compute the stop time\n",
+    "    t_period = (g.xmax - g.xmin) / np.abs(u)\n",
+    "    tmax = num_periods * t_period\n",
+    "    \n",
+    "    # setup the initial conditions and store them for later\n",
+    "    # plotting\n",
+    "    init_cond(g)\n",
+    "    g.ainit[:] = g.a[:]\n",
+    "    \n",
+    "    # compute the timestep\n",
+    "    dt = C * g.dx / np.abs(u)\n",
+    "    \n",
+    "    # evolution loop\n",
+    "    t = 0.0\n",
+    "    while t < tmax:\n",
+    "        if t + dt > tmax:\n",
+    "            dt = tmax - t\n",
+    "            \n",
+    "        # get the interface states -- just piecewise constant\n",
+    "        \n",
+    "        # solve the Riemann problem\n",
+    "        \n",
+    "        # compute the fluxes\n",
+    "        \n",
+    "        # conservative update"
    ]
   }
  ],
