--- a/content/advection/advection-second-order.ipynb
+++ b/content/advection/advection-second-order.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "user_expressions": []
+   },
    "source": [
-    "# Second-order advection"
+    "# Second-order Advection"
    ]
   },
   {
@@ -462,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
