--- a/content/euler/euler-eigen.ipynb
+++ b/content/euler/euler-eigen.ipynb
@@ -1,44 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "IPython console for SymPy 1.6.2 (Python 3.8.7-64-bit) (ground types: python)\n",
-      "\n",
-      "These commands were executed:\n",
-      ">>> from __future__ import division\n",
-      ">>> from sympy import *\n",
-      ">>> x, y, z, t = symbols('x y z t')\n",
-      ">>> k, m, n = symbols('k m n', integer=True)\n",
-      ">>> f, g, h = symbols('f g h', cls=Function)\n",
-      ">>> init_printing()\n",
-      "\n",
-      "Documentation can be found at https://docs.sympy.org/1.6.2/\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sympy import init_session\n",
-    "init_session(use_latex=\"mathjax\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "user_expressions": []
+   },
    "source": [
-    "# Euler equations eigensystem\n",
+    "# Euler Equations Eigensystem\n",
     "\n",
     "## Primitive variable form\n",
     "\n",
@@ -57,6 +25,40 @@
     "The sound speed is related to the adiabatic index, $\\gamma$, as $c^2 = \\gamma p /\\rho$.\n",
     "\n",
     "We can represent this matrix symbolically in SymPy and explore its eigensystem."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IPython console for SymPy 1.11.1 (Python 3.11.4-64-bit) (ground types: gmpy)\n",
+      "\n",
+      "These commands were executed:\n",
+      ">>> from sympy import *\n",
+      ">>> x, y, z, t = symbols('x y z t')\n",
+      ">>> k, m, n = symbols('k m n', integer=True)\n",
+      ">>> f, g, h = symbols('f g h', cls=Function)\n",
+      ">>> init_printing()\n",
+      "\n",
+      "Documentation can be found at https://docs.sympy.org/1.11.1/\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sympy import init_session\n",
+    "init_session(use_latex=\"mathjax\")"
    ]
   },
   {
@@ -1140,7 +1142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
