--- a/content/euler/euler-riemann.ipynb
+++ b/content/euler/euler-riemann.ipynb
@@ -1,25 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import scipy.optimize as optimize"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": [],
+    "user_expressions": []
    },
    "source": [
-    "# Euler Riemann problem"
+    "# Euler Riemann Problem"
    ]
   },
   {
@@ -27,7 +18,8 @@
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "user_expressions": []
    },
    "source": [
     "To compute the fluxes through the interface, we will need to solve the Riemann\n",
@@ -177,6 +169,28 @@
     "$$u_\\star = u_R - \\frac{2 c_R}{\\gamma - 1} \\left [ 1 - \\left ( \\frac{p_\\star}{p_R} \\right )^{(\\gamma-1)/2\\gamma} \\right ]$$\n",
     "\n",
     "for the right rarefaction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": [
+    "## Implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import scipy.optimize as optimize"
    ]
   },
   {
@@ -502,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
