--- a/content/euler/euler-riemann-sampling.ipynb
+++ b/content/euler/euler-riemann-sampling.ipynb
@@ -1,14 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "user_expressions": []
+   },
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import scipy.optimize as optimize"
+    "# Sampling the Riemann Solution\n"
    ]
   },
   {
@@ -16,21 +17,11 @@
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "user_expressions": []
    },
    "source": [
-    "# Sampling the Riemann solution"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Once we have the star state, we need to know which state is on the interface of our cells&mdash%that is the state that we will use to evaluate the fluxes through the interface.\n",
+    "Once we have the star state, we need to know which state is on the interface of our cells&mdash;that is the state that we will use to evaluate the fluxes through the interface.\n",
     "\n",
     "To determine that state we need to know how fast each of the three waves are moving (and in which direction) and then we simply look for which state is left behind on the interface by the waves moving away from it.\n",
     "\n",
@@ -185,6 +176,17 @@
     "### Implementation\n",
     "\n",
     "Here we extend our `RiemannProblem` class to add methods to find the solution if we are a shock or rarefaction and to do the sampling:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import scipy.optimize as optimize"
    ]
   },
   {
@@ -372,13 +374,6 @@
     "                             u_{i+1/2} p_{i+1/2}\n",
     "                            \\end{array} \\right )$$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -397,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
