--- a/content/euler/euler-solver.ipynb
+++ b/content/euler/euler-solver.ipynb
@@ -1,26 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "plt.rcParams['figure.dpi'] = 100\n",
-    "plt.rcParams['figure.figsize'] = [8, 6]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "user_expressions": []
    },
    "source": [
-    "# Second-order Euler solver"
+    "# Second-Order Euler Solver\n",
+    "\n"
    ]
   },
   {
@@ -82,6 +72,20 @@
    },
    "source": [
     "To make life easier, we'll have a simple class with indices that we use to index the fluid state arrays.  We can pass this around and be sure that we are always accessing the correct fluid state."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.rcParams['figure.dpi'] = 100\n",
+    "plt.rcParams['figure.figsize'] = [8, 6]"
    ]
   },
   {
@@ -898,20 +902,6 @@
     "\n",
     "fig.set_size_inches((6, 10))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -930,7 +920,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
