--- a/content/advection/advection-convergence.ipynb
+++ b/content/advection/advection-convergence.ipynb
@@ -22,9 +22,22 @@
     "\n",
     "$$\\epsilon = \\| a_i^\\mathrm{final} - a_i^\\mathrm{initial} \\|_2\n",
     "   = \\left [ \\Delta x \\sum_{i=0}^{N-1} (a_i^\\mathrm{final} - a_i^\\mathrm{initial} )^2 \\right ]^{1/2}$$\n",
-    "   \n",
-    "One final note: it only makes sense to discuss convergence if the initial conditions themselves converge.  For the top hat, there is a discontinuity, and as we increase and increase the resolution, we will never resolve the step.  So the top hat is not a good set of initial conditions to assess convergence.  We should use a smooth problem.\n",
-    "\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{note}\n",
+    "It only makes sense to discuss convergence if the initial conditions themselves converge.  For the top hat, there is a discontinuity, and as we increase and increase the resolution, we will never resolve the step.  So the top hat is not a good set of initial conditions to assess convergence.  We should use a smooth problem.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We'll look at the Gaussian."
    ]
   },
@@ -173,6 +186,25 @@
    "source": [
     "As we see, this is demonstrating first-order convergence&mdash;as we double the number of cells, the error is decreasing by a almost a factor of 2."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": [
+    "```{admonition} Exercise\n",
+    "\n",
+    "Try running the convergence test with the top hat initial conditions\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -191,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
