--- a/content/advection/advection-first-order.ipynb
+++ b/content/advection/advection-first-order.ipynb
@@ -121,6 +121,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f858c06e-a12b-46dc-9ac1-c260ad8bed3f",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": [
+    "## Initial conditions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7be3aeb2-db33-49db-8aa7-c5958745c9a7",
    "metadata": {},
    "source": [
@@ -269,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
