add more admonitions

--- a/content/advection/advection-second-order.ipynb
+++ b/content/advection/advection-second-order.ipynb
@@ -38,15 +38,28 @@
     "\n",
     "$$\\langle a \\rangle_i = a(x_i) + \\mathcal{O}(\\Delta x^2)$$\n",
     "\n",
-    "So if we work to second-order in space, then we don't need to worry about the difference between the cell average and cell-center.  \n",
-    "\n",
-    "To make the notation easier, we'll drop the $\\langle \\rangle$ from now forward."
+    "So if we work to second-order in space, then we don't need to worry about the difference between the cell average and cell-center.  "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "user_expressions": []
+   },
    "source": [
+    "```{note}\n",
+    "To make the notation easier, we'll drop the $\\langle \\rangle$ from now forward.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": [
+    "## Temporal discretization\n",
+    "\n",
     "There are 2 broad ways that we can handle the time integration to get more accuracy:\n",
     "\n",
     "* Predict our interface states at the midpoint in time using a Taylor expansion (in both space and time).  This would result in a time-centered interface state.  This procedure is sometimes called *characteristic tracing*.  \n",
@@ -322,10 +335,24 @@
     "    0 & \\mathit{otherwise}\n",
     "    \\end{array}\n",
     "  \\right .\n",
-    "$$\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": [
+    "```{tip}\n",
     "Most limiters have a form like this.  The key is the check $a \\cdot b > 0$.  That is checking if the slopes on the left and right of the interface are the same sign.  If they are not the same sign, then we are at an extrema (a minimum or maximum) and those are the situations where we want to limit.\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Here's a visualization of the effect of the limiter:\n",
     "\n",
     "![limited slopes](generalgrid.png)\n",
@@ -446,6 +473,24 @@
     "\n",
     "There are limiters that do a better job than `minmod()` that can be explored to help fix this."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "user_expressions": []
+   },
+   "source": [
+    "```{admonition} Exercise\n",
+    "Rerun the convergence test, but use *unlimited* slopes\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
