--- a/content/euler/euler-riemann-sampling.ipynb
+++ b/content/euler/euler-riemann-sampling.ipynb
@@ -78,7 +78,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "user_expressions": []
+   },
    "source": [
     "## Wave speeds\n",
     "\n",
@@ -98,12 +100,27 @@
     "S = u_R + c_R \\sqrt{\\frac{\\gamma + 1}{2\\gamma} \\left (\\frac{p_\\star}{p_R} \\right ) + \\frac{\\gamma -1}{2\\gamma}}\n",
     "$$\n",
     "\n",
+    "```{note}\n",
+    "As discussed previously, these expression are only valid for a gamma-law equation of state.\n",
+    "For a general EOS, the shock speed cannot be found analytically.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Contact discontinuity\n",
     "\n",
     "A contact discontinuity propagates in the star region, and the velocity there is $u_\\star$ and is constant in that region, so the contact just propagates at this speed:\n",
     "\n",
-    "$$S_0 = u_\\star$$\n",
-    "\n",
+    "$$S_0 = u_\\star$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Rarefaction\n",
     "\n",
     "A rarefaction is subsonic, but it is spread out (it is not a discontinuity).  We call the leading part the \"head\" and the trailing part the \"tail\".  The head and tail move at different speeds, just $u \\pm c$ corresponding to the region they abut.\n",
