--- a/content/advection/advection-grid-class.ipynb
+++ b/content/advection/advection-grid-class.ipynb
@@ -17,7 +17,7 @@
     "user_expressions": []
    },
    "source": [
-    "Consider comstructing a derivate using a difference approximation of the form:\n",
+    "Consider constructing a derivate using a difference approximation of the form:\n",
     "\n",
     "$$\\frac{\\partial a}{\\partial x} \\approx \\frac{a_{i+1} - a_{i-1}}{2 \\Delta x}$$\n",
     "\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "63d0a945-9910-4511-a80e-7af4e22853f9",
    "metadata": {
     "tags": []
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "03a68f32-db9f-4f68-998d-94581f1e59de",
    "metadata": {
     "tags": []
@@ -149,16 +149,14 @@
   {
    "cell_type": "markdown",
    "id": "6dbca05e-ec89-4005-b825-0990d2509388",
-   "metadata": {
-    "user_expressions": []
-   },
+   "metadata": {},
    "source": [
     "Let's test this out to see how the ghost cell filling works.  The above implementation does periodic boundaries."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "ab616851-d715-46c9-9738-f3aca789c27c",
    "metadata": {
     "tags": []
@@ -170,7 +168,7 @@
        "FVGrid(10, ng=2, xmin=0.0, xmax=1.0)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "baed3535-664b-4f31-9ad8-6c374bd3af1b",
    "metadata": {
     "tags": []
@@ -205,7 +203,7 @@
        "        0.])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,8 +217,7 @@
    "cell_type": "markdown",
    "id": "52e8eda6-7171-4e04-b11b-dd368e0728cd",
    "metadata": {
-    "tags": [],
-    "user_expressions": []
+    "tags": []
    },
    "source": [
     "Now we can fill ghost cells.  For later flexibility, the `fill_BCs()` method takes an argument which is the array we are filling ghost cells on"
@@ -228,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "4b109a89-2342-4a68-ae9f-cf8bc58ccf77",
    "metadata": {
     "tags": []
@@ -241,7 +238,7 @@
        "        2.])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
