--- a/content/euler/euler-riemann.ipynb
+++ b/content/euler/euler-riemann.ipynb
@@ -214,11 +214,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "user_expressions": []
+   },
    "source": [
     "For a gamma-law equation of state, constant entropy means:\n",
     "\n",
-    "$$P = K \\rho^\\gamma$$\n",
+    "$$p = K \\rho^\\gamma$$\n",
     "\n",
     "and we can do the integral and we find:\n",
     "\n",
