--- a/content/advection/advection-grid-class.ipynb
+++ b/content/advection/advection-grid-class.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "$$\\frac{\\partial a}{\\partial x} \\approx \\frac{a_{i+1} - a_{i-1}}{2 \\Delta x}$$\n",
     "\n",
-    "Now imagine that our grid has $N$ zones, indexed by $i = 0, 1, \\ldots, N-1$.  Our difference approximation for $\\partial a/\\partial x |_i=0$ is:\n",
+    "Now imagine that our grid has $N$ zones, indexed by $i = 0, 1, \\ldots, N-1$.  Our difference approximation for $\\partial a/\\partial x |_{i=0}$ is:\n",
     "\n",
     "$$\\left .\\frac{\\partial a}{\\partial x} \\right |_{i=0} \\approx \\frac{a_1 - a_{-1}}{2\\Delta x}$$\n",
     "\n",
