--- a/content/euler/euler-riemann.ipynb
+++ b/content/euler/euler-riemann.ipynb
@@ -70,7 +70,7 @@
     "in [On the Piecewise Parabolic Method for Compressible Flow With Stellar Equations of State](https://ui.adsabs.harvard.edu/abs/2015ApJS..216...31Z/abstract) by Zingale & Katz.\n",
     "```\n",
     "\n",
-    "For a gamma-law gas, we can write down analytic expressions for the change in the primitive variables across both a rarefaction and shock.  We can then solve these to find the state in-between the left and right waver&mdash;the star state."
+    "For a gamma-law gas, we can write down analytic expressions for the change in the primitive variables across both a rarefaction and shock.  We can then solve these to find the state in-between the left and right waves&mdash;the star state."
    ]
   },
   {
