--- a/content/advection/advection-first-order.ipynb
+++ b/content/advection/advection-first-order.ipynb
@@ -28,7 +28,7 @@
    "id": "090f1649-e823-425c-ab5f-01ca212f6b64",
    "metadata": {},
    "source": [
-    "For convenience, the grid module we already saw can by imported"
+    "For convenience, the grid module can be downloaded as a file [fv_grid.py](https://raw.githubusercontent.com/zingale/cca-summer-school/refs/heads/main/content/advection/fv_grid.py) and placed in the same directory as this notebook.  Then it can be imported"
    ]
   },
   {
@@ -279,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
